create base scss files

--- a/public/src/assets/scss/common/base_list/_base.scss
+++ b/public/src/assets/scss/common/base_list/_base.scss
@@ -9,8 +9,9 @@
 =============================+
  */
 
-//  @import '/public/src/assets/scss/common/base_list/variables';
-@import './function';
-@import './variables';
-@import './mixins';
-@import './com';
+@import 'public/src/assets/scss/common/base_list/variables';
+@import 'public/src/assets/scss/common/base_list/function';
+@import 'public/src/assets/scss/common/base_list/variables';
+@import 'public/src/assets/scss/common/base_list/mixins';
+@import 'public/src/assets/scss/common/base_list/com';
+@import 'public/src/assets/scss/common/base_list/layout';
