--- a/public/src/assets/scss/common/base_list/_variables.scss
+++ b/public/src/assets/scss/common/base_list/_variables.scss
@@ -1,7 +1,7 @@
 $pointColor_red: #8C1127;
 $pointColor_yellow: #D9AB73;
-$light_grey: #C4C4C4;
-$dark_grey: #333333;
+$light_gray: #C4C4C4;
+$dark_gray: #333333;
 
 $ft_pgTitle: 48px;
 $ft_title: 36px;
