--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <%- include(`${process.cwd()}/views/common/base/head.ejs`, {path: 'index', title: 'Home' }) %>
+    
   </head>
   <body>
+    <%- include(`${process.cwd()}/views/common/components/partial/header.ejs`) %>
     <h1><%= title %></h1>
+    <div class="movie__slide"></div>
     <p>Welcome to <%= title %></p>
-    <script>
-      
-    </script>
+    <%- include(`${process.cwd()}/views/common/components/partial/footer.ejs`, {path: 'index'}) %>
+    <%- include(`${process.cwd()}/views/common/base/foot.ejs`, {path: 'index'}) %>
   </body>
 </html>
