--- a/views/common/components/partial/header.ejs
+++ b/views/common/components/partial/header.ejs
@@ -1,26 +1,26 @@
-<nav class="navbar navbar-expand-lg page__nav">
+<nav class="navbar navbar-expand-lg header__nav">
   <div class="navbar-collapse">
 
     <ul class="navbar-nav justify-content-start">
       <li class="nav-item">
-        <a class="nav-link page__link strong" href="/">Home</a>
+        <a class="nav-link ft-white header__link strong" href="/">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link page__link strong" href="/movie/">Movie</a>
+        <a class="nav-link ft-white header__link strong" href="/movie/">Movie</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link page__link strong" href="#">Play</a>
+        <a class="nav-link ft-white header__link strong" href="#">Play</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link page__link strong" href="#">Musical</a>
+        <a class="nav-link ft-white header__link strong" href="#">Musical</a>
       </li>
     </ul>
     <ul class="navbar-nav navbar-right">
       <li class="nav-item">
-        <a class="nav-link page__link strong" href="/auth/signup">Sign up</a>
+        <a class="nav-link ft-white header__link strong" href="/auth/signup">Sign up</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link page__link strong" href="/auth/signin">Sign in</a>
+        <a class="nav-link ft-white header__link strong" href="/auth/signin">Sign in</a>
       </li>
     </ul>
   </div>
