--- a/public/src/assets/scss/common/base_list/_layout.scss
+++ b/public/src/assets/scss/common/base_list/_layout.scss
@@ -1,23 +1,24 @@
 //Layout style like header, footer, sidebar etc.
 
 // header
-.page__nav{
+.header__nav{
   background-color: $pointColor_red;
   height: 70px;
   color: #fff;
   @include clearFloat;
 }
 
-.page__link{
-  color:#fff;
-  transition: all .2s;
-  &:hover{
-    color: $pointColor_yellow;
+//footer
+.footer{
+  background-color: $pointColor_red;
+  height: 150px;
+  margin-top: 120px;
+}
+
+.footer__list{
+  padding: 50px 0 30px;
+  &__item{
+    font-size: $ft_medium;
+    padding-right: 45px;
   }
-}
-.navbar-left{
-  float: left;
-}
-.navbar-right{
-  float: right;
 }
