--- a/public/src/assets/scss/index.scss
+++ b/public/src/assets/scss/index.scss
@@ -1,2 +1,56 @@
 @import 'public/src/assets/scss/common/base_list/base';
 
+.section__slide-main{
+  position: relative;
+  height: 480px;
+  overflow: hidden;
+  &__button_box{
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    z-index: 50;
+    @include clearFloat;
+    .material-icons{
+      font-size: 50px;
+    }
+  }
+  &__button-prev {
+    float: left;
+    cursor: pointer;
+  }
+
+  &__button-next {
+    float: right;
+    cursor: pointer;
+  }
+}
+.section__slide-part{
+  position: relative;
+  img{
+    width: 100%;
+  }
+  // height: 406px;
+  .section__title{
+    font-size: $ft_title;
+    &::after{
+      display: block;
+      width: 80px;
+      height: 1px;
+      background-color: #fff;
+      content: 1px;
+    }
+  }
+  .swiper-container-part{
+    overflow: hidden;
+  }
+  &__button_box{
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    z-index: 50;
+    @include clearFloat;
+    .material-icons{
+      font-size: 20px;
+      color: $pointColor_yellow
+    }
+}
