--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,71 +1,169 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <%- include(`${process.cwd()}/views/common/base/head.ejs`, {path: 'index', title: 'Home' }) %>
-  </head>
-  <body>
-    <%- include(`${process.cwd()}/views/common/components/partial/header.ejs`) %>
-    <div class="section__slide-main">
-      <div class="swiper-container-main">
+
+<head>
+  <%- include(`${process.cwd()}/views/common/base/head.ejs`, {path: 'index', title: 'Home' }) %>
+</head>
+
+<body>
+  <%- include(`${process.cwd()}/views/common/components/partial/header.ejs`) %>
+  <div class="section__slide-main">
+    <div class="swiper-container-main">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <a href="" class="link-blcok">
+            <img src="/dist/assets/images/main/slide_01.jpg" alt="">
+          </a>
+        </div>
+        <div class="swiper-slide">
+          <a href="" class="link-blcok">
+            <img src="/dist/assets/images/main/slide_02.jpg" alt="">
+          </a>
+        </div>
+        <div class="swiper-slide">
+          <a href="" class="link-blcok">
+            <img src="/dist/assets/images/main/slide_01.jpg" alt="">
+          </a>
+        </div>
+      </div>
+      <!-- If we need navigation buttons -->
+        <div class="section__slide-main__button-prev">
+          <i class="material-icons">
+            navigate_before
+          </i>
+        </div>
+        <div class="section__slide-main__button-next">
+          <i class="material-icons">
+            navigate_next
+          </i>
+        </div>
+    </div>
+  </div>
+  <div class="section__slide-part movie">
+    <div class="wrap">
+      <div class="section__title_box">
+        <span class="line"></span>
+        <h3 class="section__title strong">Top Rated Movie</h3>
+      </div>
+      <div class="swiper-container-part movie">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="/dist/assets/images/main/slide_01.jpg" alt="">
+            <a href="" class="link-blcok">
+              <img src="/dist/assets/images/main/slide_01.jpg" alt="">
+            </a>
           </div>
           <div class="swiper-slide">
-            <img src="/dist/assets/images/main/slide_02.jpg" alt="">
+            <a href="" class="link-blcok">
+              <img src="/dist/assets/images/main/slide_02.jpg" alt="">
+            </a>
           </div>
           <div class="swiper-slide">
-            <img src="/dist/assets/images/main/slide_01.jpg" alt="">
+            <a href="" class="link-blcok">
+              <img src="/dist/assets/images/main/slide_01.jpg" alt="">
+            </a>
           </div>
         </div>
         <!-- If we need navigation buttons -->
-        <div class="section__slide__button_box">
-          <div class="section__slide__button-prev">
+          <div class="section__slide-part__button-prev">
             <i class="material-icons">
               navigate_before
             </i>
           </div>
-          <div class="section__slide__button-next">
+          <div class="section__slide-part__button-next">
             <i class="material-icons">
               navigate_next
             </i>
           </div>
-        </div>
       </div>
     </div>
-    <div class="section__slide-part">
-      <div class="wrap">
-        <h3 class="section__title strong">Top Rated Movie</h3>
-        <div class="swiper-container-part movie">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
+  </div>
+  <div class="section__event">
+    <div class="section__event__text_box">
+      <h3 class="section__title hidden">시사회 이벤트 배너</h3>
+      <p class="section__title__desc hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt numquam enim
+        magni dolorem, nam corrupti et commodi adipisci ut impedit. Animi alias ipsum blanditiis ut, quas molestiae ipsa
+        dolore repudiandae.</p>
+    </div>
+  </div>
+
+  <div class="section__slide-part play">
+    <div class="wrap">
+      <div class="section__title_box">
+        <span class="line"></span>
+        <h3 class="section__title strong">Top Rated Play</h3>
+      </div>
+      <div class="swiper-container-part play">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <a href="" class="link-block">
               <img src="/dist/assets/images/main/slide_01.jpg" alt="">
-            </div>
-            <div class="swiper-slide">
+            </a>
+          </div>
+          <div class="swiper-slide">
+            <a href="" class="link-block">
               <img src="/dist/assets/images/main/slide_02.jpg" alt="">
-            </div>
-            <div class="swiper-slide">
+            </a>
+          </div>
+          <div class="swiper-slide">
+            <a href="" class="link-block">
               <img src="/dist/assets/images/main/slide_01.jpg" alt="">
-            </div>
+            </a>
           </div>
-          <!-- If we need navigation buttons -->
-          <div class="section__slide__button_box">
-            <div class="section__slide__button-prev">
-              <i class="material-icons">
-                navigate_before
-              </i>
-            </div>
-            <div class="section__slide__button-next">
-              <i class="material-icons">
-                navigate_next
-              </i>
-            </div>
+        </div>
+        <!-- If we need navigation buttons -->
+          <div class="section__slide-part__button-prev">
+            <i class="material-icons">
+              navigate_before
+            </i>
           </div>
+          <div class="section__slide-part__button-next">
+            <i class="material-icons">
+              navigate_next
+            </i>
         </div>
       </div>
     </div>
-    
-    <%- include(`${process.cwd()}/views/common/components/partial/footer.ejs`, {path: 'index'}) %>
-    <%- include(`${process.cwd()}/views/common/base/foot.ejs`, {path: 'index'}) %>
-  </body>
+  </div>
+  <div class="section__slide-part musical">
+    <div class="wrap">
+      <div class="section__title_box">
+        <span class="line"></span>
+        <h3 class="section__title strong">Top Rated Musical</h3>
+      </div>
+      <div class="swiper-container-part musical">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <a href="" class="link-blcok">
+              <img src="/dist/assets/images/main/slide_01.jpg" alt="">
+            </a>
+          </div>
+          <div class="swiper-slide">
+            <a href="" class="link-blcok">
+              <img src="/dist/assets/images/main/slide_02.jpg" alt="">
+            </a>
+          </div>
+          <div class="swiper-slide">
+            <a href="" class="link-blcok">
+              <img src="/dist/assets/images/main/slide_01.jpg" alt="">
+            </a>
+          </div>
+        </div>
+        <!-- If we need navigation buttons -->
+          <div class="section__slide-part__button-prev">
+            <i class="material-icons">
+              navigate_before
+            </i>
+          </div>
+          <div class="section__slide-part__button-next">
+            <i class="material-icons">
+              navigate_next
+            </i>
+          </div>
+      </div>
+    </div>
+  </div>
+  <%- include(`${process.cwd()}/views/common/components/partial/footer.ejs`, {path: 'index'}) %>
+  <%- include(`${process.cwd()}/views/common/base/foot.ejs`, {path: 'index'}) %>
+</body>
+
 </html>
