--- a/views/pages/category/movie_list.ejs
+++ b/views/pages/category/movie_list.ejs
@@ -2,14 +2,120 @@
 <html>
   <head>
     <%- include(`${process.cwd()}/views/common/base/head.ejs`, {path: 'category/movie_list', title: 'Home' }) %>
-    
   </head>
   <body>
     <%- include(`${process.cwd()}/views/common/components/partial/header.ejs`) %>
     <h1><%= title %></h1>
-    <div class="movie__slide"></div>
-    <p>Welcome to <%= title %></p>
-    <%- include(`${process.cwd()}/views/common/components/partial/footer.ejs`, {path: 'index'}) %>
+    <div class="section__slide-main">
+      <div class="swiper-container-main">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <a href="" class="link-blcok">
+              <img src="/dist/assets/images/main/slide_01.jpg" alt="">
+            </a>
+          </div>
+          <div class="swiper-slide">
+            <a href="" class="link-blcok">
+              <img src="/dist/assets/images/main/slide_02.jpg" alt="">
+            </a>
+          </div>
+          <div class="swiper-slide">
+            <a href="" class="link-blcok">
+              <img src="/dist/assets/images/main/slide_01.jpg" alt="">
+            </a>
+          </div>
+        </div>
+        <!-- If we need navigation buttons -->
+          <div class="section__slide-main__button-prev">
+            <i class="material-icons">
+              navigate_before
+            </i>
+          </div>
+          <div class="section__slide-main__button-next">
+            <i class="material-icons">
+              navigate_next
+            </i>
+          </div>
+      </div>
+    </div>
+    <div class="section__slide-part rated">
+      <div class="wrap">
+        <div class="section__title_box">
+          <span class="line"></span>
+          <h3 class="section__title strong">Top Rated Movie</h3>
+        </div>
+        <div class="swiper-container-part rated">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <a href="" class="link-blcok">
+                <img src="/dist/assets/images/main/slide_01.jpg" alt="">
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="" class="link-blcok">
+                <img src="/dist/assets/images/main/slide_02.jpg" alt="">
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="" class="link-blcok">
+                <img src="/dist/assets/images/main/slide_01.jpg" alt="">
+              </a>
+            </div>
+          </div>
+          <!-- If we need navigation buttons -->
+            <div class="section__slide-part__button-prev">
+              <i class="material-icons">
+                navigate_before
+              </i>
+            </div>
+            <div class="section__slide-part__button-next">
+              <i class="material-icons">
+                navigate_next
+              </i>
+            </div>
+        </div>
+      </div>
+    </div>
+    <div class="section__slide-part recommend">
+      <div class="wrap">
+        <div class="section__title_box">
+          <span class="line"></span>
+          <h3 class="section__title strong">Top Rated Movie</h3>
+        </div>
+        <div class="swiper-container-part recommend">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <a href="" class="link-blcok">
+                <img src="/dist/assets/images/main/slide_01.jpg" alt="">
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="" class="link-blcok">
+                <img src="/dist/assets/images/main/slide_02.jpg" alt="">
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="" class="link-blcok">
+                <img src="/dist/assets/images/main/slide_01.jpg" alt="">
+              </a>
+            </div>
+          </div>
+          <!-- If we need navigation buttons -->
+            <div class="section__slide-part__button-prev">
+              <i class="material-icons">
+                navigate_before
+              </i>
+            </div>
+            <div class="section__slide-part__button-next">
+              <i class="material-icons">
+                navigate_next
+              </i>
+            </div>
+        </div>
+      </div>
+    </div>
+
+    <%- include(`${process.cwd()}/views/common/components/partial/footer.ejs`, {path: 'movie_list'}) %>
     <%- include(`${process.cwd()}/views/common/base/foot.ejs`, {path: 'index'}) %>
   </body>
 </html>
