add movie list, detail route html, and css

--- a/views/common/components/partial/header.ejs
+++ b/views/common/components/partial/header.ejs
@@ -6,10 +6,10 @@
         <a class="nav-link ft-white header__link strong" href="/">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link ft-white header__link strong" href="/movie/">Movie</a>
+        <a class="nav-link ft-white header__link strong" href="/movie/list">Movie</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link ft-white header__link strong" href="#">Play</a>
+        <a class="nav-link ft-white header__link strong" href="">Play</a>
       </li>
       <li class="nav-item">
         <a class="nav-link ft-white header__link strong" href="#">Musical</a>
