--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,17 +48,17 @@
       <div class="swiper-container-part movie">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <a href="" class="link-blcok">
+            <a href="/movie/detail" class="link-blcok">
               <img src="/dist/assets/images/main/slide_01.jpg" alt="">
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="" class="link-blcok">
+            <a href="/movie/detail" class="link-blcok">
               <img src="/dist/assets/images/main/slide_02.jpg" alt="">
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="" class="link-blcok">
+            <a href="/movie_list" class="link-blcok">
               <img src="/dist/assets/images/main/slide_01.jpg" alt="">
             </a>
           </div>
