--- a/views/pages/category/movie_list.ejs
+++ b/views/pages/category/movie_list.ejs
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%- include(`${process.cwd()}/views/common/base/head.ejs`, {path: 'category/movie_list', title: 'Home' }) %>
+    <%- include(`${process.cwd()}/views/common/base/head.ejs`, {path: 'pages/category/movie_list', title: 'Movie list' }) %>
   </head>
   <body>
     <%- include(`${process.cwd()}/views/common/components/partial/header.ejs`) %>
-    <h1><%= title %></h1>
     <div class="section__slide-main">
       <div class="swiper-container-main">
         <div class="swiper-wrapper">
@@ -47,17 +46,17 @@
         <div class="swiper-container-part rated">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <a href="" class="link-blcok">
+              <a href="/movie/detail" class="link-blcok">
                 <img src="/dist/assets/images/main/slide_01.jpg" alt="">
               </a>
             </div>
             <div class="swiper-slide">
-              <a href="" class="link-blcok">
+              <a href="/movie/detail" class="link-blcok">
                 <img src="/dist/assets/images/main/slide_02.jpg" alt="">
               </a>
             </div>
             <div class="swiper-slide">
-              <a href="" class="link-blcok">
+              <a href="/movie/detail" class="link-blcok">
                 <img src="/dist/assets/images/main/slide_01.jpg" alt="">
               </a>
             </div>
@@ -85,17 +84,17 @@
         <div class="swiper-container-part recommend">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <a href="" class="link-blcok">
+              <a href="/movie/detail" class="link-blcok">
                 <img src="/dist/assets/images/main/slide_01.jpg" alt="">
               </a>
             </div>
             <div class="swiper-slide">
-              <a href="" class="link-blcok">
+              <a href="/movie/detail" class="link-blcok">
                 <img src="/dist/assets/images/main/slide_02.jpg" alt="">
               </a>
             </div>
             <div class="swiper-slide">
-              <a href="" class="link-blcok">
+              <a href="/movie/detail" class="link-blcok">
                 <img src="/dist/assets/images/main/slide_01.jpg" alt="">
               </a>
             </div>
@@ -115,7 +114,7 @@
       </div>
     </div>
 
-    <%- include(`${process.cwd()}/views/common/components/partial/footer.ejs`, {path: 'movie_list'}) %>
-    <%- include(`${process.cwd()}/views/common/base/foot.ejs`, {path: 'index'}) %>
+    <%- include(`${process.cwd()}/views/common/components/partial/footer.ejs`, {path: 'pages/category/movie_list'}) %>
+    <%- include(`${process.cwd()}/views/common/base/foot.ejs`, {path: 'pages/category/movie_list'}) %>
   </body>
 </html>
