--- a/public/src/assets/scss/common/base_list/_mixins.scss
+++ b/public/src/assets/scss/common/base_list/_mixins.scss
@@ -17,3 +17,40 @@
     content: '';
   }
 }
+
+@mixin respond-to($breakpoint) {
+  // If the key exists in the map
+  @if map-has-key($breakpoints, $breakpoint) {
+    // Prints a media query based on the value
+    @media (min-width: map-get($breakpoints, $breakpoint)) {
+      @content;
+    }
+  }
+ 
+  // If the key doesn't exist in the map
+  @else {
+    @warn "Unfortunately, no value could be retrieved from `#{$breakpoint}`. "
+        + "Available breakpoints are: #{map-keys($breakpoints)}.";
+  }
+}
+
+@mixin pagenation_button($fontsize){
+  color: #fff;
+  font-size: $fontsize;
+  padding: 0 10px;
+  text-decoration: none;
+  &.active{
+    color: $pointColor_yellow;
+    &:hover{
+      color: $pointColor_red;
+      text-decoration: none;
+    }
+  }
+  &.disabled{
+    
+  }
+  &:hover{
+    color: $pointColor_yellow;
+    text-decoration: none;
+  }
+}
