--- a/public/src/assets/scss/common/base_list/_variables.scss
+++ b/public/src/assets/scss/common/base_list/_variables.scss
@@ -1,7 +1,9 @@
 $pointColor_red: #8C1127;
 $pointColor_yellow: #D9AB73;
 $light_gray: #C4C4C4;
+$light_dark_gray: #828282;
 $dark_gray: #333333;
+
 
 $ft_pgTitle: 48px;
 $ft_title: 36px;
@@ -9,3 +11,10 @@ $ft_large: 24px;
 $ft_medium: 20px;
 $ft_small: 18px;
 $ft_xsmall: 14px;
+
+$breakpoints: (
+  'small':  540px,
+  'medium': 720px,
+  'large':  960px,
+  'extraL': 1140px,
+) !default;
