--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,7 +58,7 @@
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="/movie_list" class="link-blcok">
+            <a href="/movie/detail" class="link-blcok">
               <img src="/dist/assets/images/main/slide_01.jpg" alt="">
             </a>
           </div>
@@ -95,17 +95,17 @@
       <div class="swiper-container-part play">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <a href="" class="link-block">
+            <a href="/play/detail" class="link-block">
               <img src="/dist/assets/images/main/slide_01.jpg" alt="">
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="" class="link-block">
+            <a href="/play/detail" class="link-block">
               <img src="/dist/assets/images/main/slide_02.jpg" alt="">
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="" class="link-block">
+            <a href="/play/detail" class="link-block">
               <img src="/dist/assets/images/main/slide_01.jpg" alt="">
             </a>
           </div>
@@ -162,7 +162,7 @@
       </div>
     </div>
   </div>
-  <%- include(`${process.cwd()}/views/common/components/partial/footer.ejs`, {path: 'index'}) %>
+  <%- include(`${process.cwd()}/views/common/components/partial/footer.ejs`) %>
   <%- include(`${process.cwd()}/views/common/base/foot.ejs`, {path: 'index'}) %>
 </body>
 
