--- a/views/common/components/partial/header.ejs
+++ b/views/common/components/partial/header.ejs
@@ -9,7 +9,7 @@
         <a class="nav-link ft-white header__link strong" href="/movie/list">Movie</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link ft-white header__link strong" href="">Play</a>
+        <a class="nav-link ft-white header__link strong" href="/play/list">Play</a>
       </li>
       <li class="nav-item">
         <a class="nav-link ft-white header__link strong" href="#">Musical</a>
