--- a/public/src/assets/scss/pages/auth/signup.scss
+++ b/public/src/assets/scss/pages/auth/signup.scss
@@ -3,9 +3,38 @@
 .signup__title{
   @include pageBigTitle;
 }
+
+.signup__form{
+  &__label{
+    font-size: $ft_large;
+    line-height: 1.3;
+    margin-bottom: 5px;
+  }
+  &__input{
+    font-size: $ft_large;
+    // background-color: #e0e0e0;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    &:not([readonly]):focus{
+      border: 3px solid $pointColor_yellow;
+    }
+  }
+  .signup__button-refresh{
+    padding: 10px 0;
+    border: 0;
+    .material-icons{
+      color: #fff;
+    }
+  }
+}
+
+.signup__button_box{
+  margin-top: 70px;
+}
 .signup__button-join{
-  @include makeButton
+  @include makeButton;
+  margin-right: 15px;
 }
 .signup__button-cancel{
-  @include makeButton('gray')
+  @include makeButton('gray');
+  margin-left: 15px;
 }
