--- a/views/common/components/partial/header.ejs
+++ b/views/common/components/partial/header.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg header__nav">
+<nav class="navbar navbar-expand-lg header__nav ">
   <div class="navbar-collapse">
 
     <ul class="navbar-nav justify-content-start">
@@ -21,6 +21,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link ft-white header__link strong" href="/auth/signin">Sign in</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link ft-white header__link strong" href="/users/mypage">My page</a>
       </li>
     </ul>
   </div>
