add dashboard page and chart.js

--- a/views/common/base/head.ejs
+++ b/views/common/base/head.ejs
@@ -27,6 +27,9 @@
 <!-- Google Material Icon -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
+<!-- Chart.js -->
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+
 <!-- reset css -->
 <link rel="stylesheet" href="/dist/assets/css/reset.css">
 
