modify dashboard page - remove chart.js

--- a/public/src/assets/scss/pages/mypage/dashboard.scss
+++ b/public/src/assets/scss/pages/mypage/dashboard.scss
@@ -8,3 +8,13 @@
   font-size: $ft_large;
   line-height: 1.3;
 }
+.mypage__chart__graph{
+  width: 597px;
+  height: 276px;
+}
+.mypage__board{
+  margin-top: 120px;
+}
+.mypage__table{
+  margin-top: 5px;
+}
