--- a/public/src/assets/scss/common/base_list/_layout.scss
+++ b/public/src/assets/scss/common/base_list/_layout.scss
@@ -5,7 +5,34 @@
   background-color: $pointColor_red;
   height: 70px;
   color: #fff;
+  z-index: 100;
   @include clearFloat;
+}
+
+// side menu
+.aside__menu{
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #400A14;
+  border-right: 10px solid $pointColor_red;
+  width: 15%;
+  height: 100vh;
+  padding: 0 20px;
+  &__title{
+    margin-top: 145px;
+    font-size: $ft_large;
+  }
+  .link-block{
+    color: #fff;
+  }
+  .link-block.active{
+    color: $pointColor_yellow;
+  }
+  &__item{
+    margin: 15px 0;
+    font-size: $ft_large;
+  }
 }
 
 //footer
