update side bar menu

--- a/views/common/components/partial/aside.ejs
+++ b/views/common/components/partial/aside.ejs
@@ -2,10 +2,15 @@
   <h3 class="aside__menu__title strong">My Page</h3>
   <ul class="aside__menu__list">
     <li class="aside__menu__item">
-      <a href="" class="link-block active strong">Dashboard</a>
+      <a href="/users/mypage" class="link-block active strong">Dashboard</a>
     </li>
     <li class="aside__menu__item">
-      <a href="" class="link-block">Modify profile</a>
+      <a href="/users/change_profile" class="link-block">Change your info</a>
     </li>
   </ul>
+  <button class="btn aside__menu__button">
+    <i class="material-icons">
+      menu_open
+    </i>
+  </button>
 </aside>
