update title and class name

--- a/views/pages/mypage/dashboard.ejs
+++ b/views/pages/mypage/dashboard.ejs
@@ -5,11 +5,11 @@
 </head>
 <body>
   <%- include(`${process.cwd()}/views/common/components/partial/header.ejs`) %>
+  <%- include(`${process.cwd()}/views/common/components/partial/aside.ejs`) %>
   <div class="container-fruid">
-    <%- include(`${process.cwd()}/views/common/components/partial/aside.ejs`) %>
-    <h1 class="mypage__title">Sign in</h1>
+    <h1 class="mypage__title">My page</h1>
     <div class="row justify-content-center">
-      <div class="col-6">
+      <div class="col-4">
         <div class="mypage__login">
           <h3 class="mypage__subtitle strong">You were logged:</h3>
           <table class="table table-striped table-dark mypage__table">
