update nav menu class

--- a/views/common/components/partial/header.ejs
+++ b/views/common/components/partial/header.ejs
@@ -1,7 +1,6 @@
 <nav class="navbar navbar-expand-lg header__nav ">
   <div class="navbar-collapse">
-
-    <ul class="navbar-nav justify-content-start">
+    <ul class="navbar-nav justify-content-start mr-auto">
       <li class="nav-item">
         <a class="nav-link ft-white header__link strong" href="/">Home</a>
       </li>
@@ -15,7 +14,7 @@
         <a class="nav-link ft-white header__link strong" href="#">Musical</a>
       </li>
     </ul>
-    <ul class="navbar-nav navbar-right">
+    <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link ft-white header__link strong" href="/auth/signup">Sign up</a>
       </li>
