update detail title, description, year information

--- a/views/pages/category/movie_detail.ejs
+++ b/views/pages/category/movie_detail.ejs
@@ -15,11 +15,12 @@
         <img src="/dist/assets/images/main/movie/poster_01.jpg" alt="poster" class="section__detail__poster">
       </div>
       <div class="col-6 padding-none margin-none">
-        <h2 class="section__detail__title strong">Frozen 2</h2>
-        <p class="section__detail__subtitle"><span class="year">2019</span>, <span class="time">200m</span>, <span
+        <h2 class="section__detail__title strong"><%= movieInfo.title %></h2>
+        <p class="section__detail__subtitle"><span class="year"><%= movieInfo.year %></span>, <span class="time">200m</span>, <span
             class="age">All</span><span class="point">★★★★☆</span></p>
+            <p> </p>
         <p class="section__detail__descript">
-          Magna ex tempor non elit duis enim. Exercitation minim ex esse culpa amet velit occaecat tempor Lorem nostrud do proident. Anim ipsum velit anim deserunt in eu eiusmod nulla eu. Fugiat est cupidatat et eiusmod non commodo dolore sit deserunt elit. Est incididunt consectetur irure voluptate velit nisi do. Ullamco reprehenderit mollit commodo dolore dolore deserunt. Eiusmod non laboris nisi mollit est elit officia pariatur ut officia.
+          <%= movieInfo.description_full %>
         </p>
       </div>
     </div>
